# annubes

./: .bumpversion.cfg  .gitignore  .mlc-config.json  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  dev.ipynb  mkdocs.yml  next_steps.md  project_setup.md  pyproject.toml  ruff.toml  sonar-project.properties  versions.json
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  cffconvert.yml  documentation.yml  linting.yml  markdown-link-check.yml  markdown-links.yml  release.yml  sonarcloud.yml  typing-check.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/api/task/: index.html
0.1.0/api/tasksettingsmixin/: index.html
0.1.0/basic_example/: index.html
0.1.0/code_of_conduct/: index.html
0.1.0/installation/: index.html
0.1.0/search/: search_index.json
0.1.1/: index.html  objects.inv  sitemap.xml
0.1.1/api/task/: index.html
0.1.1/api/tasksettingsmixin/: index.html
0.1.1/basic_example/: index.html
0.1.1/contributing/: index.html
0.1.1/installation/: index.html
0.1.1/license/: index.html
0.1.1/search/: search_index.json
annubes/: __init__.py  my_module.py  task.py  trainer.py  trials.py
annubes/nn/: custom_rnn.py
annubes/tasks/: guido.py  habituation.py  task.py
docs/: Makefile  basic_example.md  conf.py  index.md  index.rst  installation.md  license.md  make.bat
docs/api/: task.md  tasksettingsmixin.md
tests/: test_my_module.py  test_task.py
